add example of needless constructor

--- a/app/components/composition/report1.hbs
+++ b/app/components/composition/report1.hbs
@@ -1,5 +1,5 @@
 <Composition::DataLoader as |dataLoader|>
-  <div class="p-2 bg-green-300">
+  <div class="p-2 bg-purple-300">
     <h1>Report1 (from {{dataLoader.lower}} to {{dataLoader.upper}})</h1>
 
     <p>
