--- a/app/components/inheritance/report1.hbs
+++ b/app/components/inheritance/report1.hbs
@@ -1,4 +1,4 @@
-<div class="p-2 bg-green-300">
+<div class="p-2 bg-purple-300">
   <h1>Report1 (from {{this.lower}} to {{this.upper}})</h1>
 
   <p>
