--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -22,4 +22,8 @@
 <ToggleContent @title="Inheritance vs Composition" @subtitle="We should always use composition">
   <InheritanceVsComposition />
 </ToggleContent>
+
+<ToggleContent @title="Needless contructor" @subtitle="Some examples of when we don't need a constructor">
+  <NeedlessConstructor />
+</ToggleContent>
 {{outlet}}
